--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -2,4 +2,4 @@
 <p>Title:<input type="text" name="title"></p>
 <p>Content:<input type="text" name="content"></p>
 <input type="submit" name="submit">
-</form>
+</form
